# Lunaris

./: README.md  check_build.sh  gen_font.py
Compiler/: CMakeLists.txt
Compiler/build-wsl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lunaris_compiler  lunaris_compiler_tests
Compiler/src/: ast.h  codegen.cpp  codegen.h  diagnostic.cpp  lexer.cpp  lexer.h  machine_backend.cpp  machine_backend.h  main.cpp  module_loader.cpp  module_loader.h  parser.cpp  parser.h  sema.cpp  sema.h  token.cpp  token.h
Compiler/tests/: parser_tests.cpp  test_main.cpp
Compiler/toolchain/: limine_x86_64.ld
CompilerV2/: CMakeLists.txt
CompilerV2/src/: ast.h  codegen.cpp  codegen.h  diagnostic.h  lexer.cpp  machine_backend.cpp  machine_backend.h  main.cpp  parser.cpp  parser.h  sema.cpp  token.cpp  token.h
CompilerV2/tests/: lexer_tests.cpp  test_main.cpp
LunarisOS/: .gitignore  Makefile  README.md  limine.conf
LunarisOS/kernel/: Makefile
LunarisOS/kernel/src/: boot.S  main.lua  terminal.lua  terminal_font.lua
VSCExtension/: language-configuration.json  lunaris-lua-tools-0.0.12.vsix  package.json  tsconfig.json
VSCExtension/src/: extension.ts  server.ts
VSCExtension/syntaxes/: lunaris-lua.injection.tmLanguage.json
